package ATTRIB_TYPE;

enum TAttribType
{
	INVALID_VAL                       = -1;
	INVALID                           =	0;
	STACKING_NUM                      = 3;
	ATTACH_ID                         = 4;
	PEOPLE_NUM                        = 5;
	PEOPLE_MAX                        = 6;
	BINGFU_SOLDIERNUM                 = 7;
	BINGFU_SHIQI                      = 8;
	BINGFU_QIGONG                     = 9;
	BINGFU_BUGONG                     = 10;
	BINGFU_GONGGONG                   = 11;
	BINGFU_QIFANG                     = 12;
	BINGFU_BUFANG                     = 13;
	BINGFU_GONGFANG                   = 14;
	LEVELADD                          = 15;
	BINGFU_DAMAGELOSE                 = 17;
	BINGFU_DAMAGELOSE_LEVELADD        = 18;
	POWER                             = 19;
	POWER_MAX                         = 20;
	AUCTION_SELLER_ID                 = 21;
	BIND                              = 22;
	SHOP_BUY_MONEY                    = 23;
	SHOP_BUY_RMB                      = 24;
	SHOP_SELL_MONEY                   = 25;
	SHOP_SELL_RMB                     = 26;
	KNOWLEDGE                         = 27;
	COMMAND                           = 28;

	ID	=	2001001	;
	LEVEL_UP_EXP_INT	=	2001002	;
	NAME_STRING	=	2001003	;
	LIFE_INT	=	2001004	;
	LIFE_CURR_INT	=	2001005	;
	ATTACK_INT	=	2001006	;
	DEFENCE_INT	=	2001007	;
	CRIT_RATE_INT	=	2001008	;
	CRIT_DAMAGE_INT	=	2001009	;
	MOVE_SPEED_INT	=	2001010	;
	ATTACK_SPEED_INT	=	2001011	;
	HIT_RATE_INT	=	2001012	;
	DODGE_RATE_INT	=	2001013	;
	EXP_VALUE_INT	=	2001014	;
	EYESIGHT_INT	=	2001015	;
	ATTACK_RANGE_INT	=	2001016	;
	CAMP_INT	=	2001017	;
	CASTING_SPEED_INT	=	2001018	;
	FINAL_DAMAGE_INT	=	2001019	;
	DELAY_EFFECT_INT	=	2001020	;
	ROLE_SCORE_INT	=	2001021	;
	GAME_CURRENCY_INT	=	2001022	;
	RMB_INT	=	2001023	;
	SKILL_LIST_CLASS	=	2001025	;
	AI_LIST_CLASS	=	2001026	;
	ATTACK_AVAILABLE_BOOL	=	2001027	;
	QUALITY_WHITE_INT	=	2001028	;
	QUALITY_GREEN_INT	=	2001029	;
	QUALITY_BLUE_INT	=	2001030	;
	QUALITY_PURPLE_INT	=	2001031	;
	QUALITY_ORANGE_INT	=	2001032	;
	EQUIP_WEAPONS_INT	=	2001033	;
	EQUIP_HEAD_INT	=	2001034	;
	EQUIP_BODY_INT	=	2001035	;
	EQUIP_HAND_INT	=	2001036	;
	EQUIP_FOOT_INT	=	2001037	;
	EQUIP_JEWELRY_INT	=	2001038	;
	HONOR_POINTS_INT	=	2001039	;
	COMPETITIVE_POINTS_INT	=	2001040	;
	GAME_CURRENCY_SHOP_INT	=	2001041	;
	RMB_SHOP_INT	=	2001042	;
	VITALITY_INT	=	2001043	;
	ATTACK_COUNT_INT	=	2001044	;
	PVP_FIGHT_COUNT_INT	=	2001045	;
	LEVEL_UP_EXP37_INT	=	2001046	;
	VIP_LEVEL_INT	=	2001047	;
	BUY_VITALITY_INT	=	2001048	;
	GROWTH_ID_INT	=	2001049	;
	GROWTH_LIFE_CLASS	=	2001050	;
	GROWTH_ATTACK_CLASS	=	2001051	;
	GROWTH_DEFENSE_CLASS	=	2001052	;
	GROWTH_CRIT_CLASS	=	2001053	;
	GROWTH_CRIT_DAMAGE_CLASS	=	2001054	;
	GROWTH_HIT_CLASS	=	2001055	;
	GROWTH_DODGE_CLASS	=	2001056	;
	GROWTH_MOVE_SPEED_CLASS	=	2001057	;
	GROWTH_ATTACK_SPEED_CLASS	=	2001058	;
	ROLE_ID_INT	=	2001059	;
	PROFESSIONAL_TYPES_INT	=	2001060	;
	PROFESSIONAL_NAME_STRING	=	2001061	;
	QUALITY_ID_INT	=	2001062	;
	ICON_STRING	=	2001063	;
	MODEL_STRING	=	2001064	;
	TEXTURE_STRING	=	2001065	;
	DESCRIBE_STRING	=	2001067	;
	LEVEL_INT	=	2001069	;
	EQUIP_PLACE_INT	=	2001070	;
	UPGRADE_PROPS_ONE_CLASS	=	2001071	;
	UPGRADE_PROPS_TWO_CLASS	=	2001072	;
	UPGRADE_PROPS_THREE_CLASS	=	2001073	;
	UPGRADE_PROPS_FOUR_CLASS	=	2001074	;
	UPGRADE_PROPS_FIVE_CLASS	=	2001075	;
	UPGRADE_PROPS_SIX_CLASS	=	2001076	;
	EQUIP_UPGRADE_ID_INT	=	2001077	;
	MAX_STACKING_INT	=	2001078	;
	PRICE_OF_GAME_CURRENCY_INT	=	2001079	;
	PRICE_OF_RMB_INT	=	2001080	;
	UPGRADE_PROPS_ATTRIBUTE_ID_ONE_INT	=	2001081	;
	UPGRADE_PROPS_ATTRIBUTE_VALUE_ONE_INT	=	2001082	;
	UPGRADE_PROPS_ATTRIBUTE_ID_TWO_INT	=	2001083	;
	UPGRADE_PROPS_ATTRIBUTE_VALUE_TWO_INT	=	2001084	;
	USE_INTERVAL_INT	=	2001086	;
	USE_DISAPPEAR_BOOL	=	2001087	;
	VALID_TIME_INT	=	2001088	;
	GET_PROPS_CLASS	=	2001089	;
	LEVEL_UP_EXP79_BOOL	=	2001090	;
	USE_GROWTH_INT	=	2001091	;
	USE_AI_CLASS	=	2001092	;
	GUARD_DEBRIS_ID_INT	=	2001093	;
	NEED_COLLECT_ACTIVATION_CLASS	=	2001094	;
	CARD_GROUP_ID_INT	=	2001095	;
	ACTIVATION_GUARD_ID_INT	=	2001096	;
	SPEND_CURRENCY_INT	=	2001097	;
	SPEND_RMB_INT	=	2001098	;
	FRONT_SKILL_INT	=	2001101	;
	SKILL_RANGE_INT	=	2001102	;
	SKILL_TARGET_INT	=	2001103	;
	CASTING_TIME_INT	=	2001104	;
	CASTING_MOVE_BOOL	=	2001105	;
	COOL_TIME_INT	=	2001106	;
	DAMAGE_VALUE_CLASS	=	2001107	;
	SKILL_TYPE_ONE_INT	=	2001108	;
	SKILL_EFFECT_ONE_INT	=	2001109	;
	EFFECT_VALUE_ONE_CLASS	=	2001110	;
	CHANCE_TO_TRIGGER_ONE_INT	=	2001111	;
	CONTINUOU_TIME_ONE_INT	=	2001112	;
	FREQUENCY_ONE_INT	=	2001113	;
	EFFECT_RANGE_ONE_CLASS	=	2001114	;
	SKILL_TYPE_TWO_INT	=	2001115	;
	SKILL_EFFECT_TWO_INT	=	2001116	;
	EFFECT_RANGE_TWO_CLASS	=	2001117	;
	MISSION_FOLLOWED_INT	=	2001118	;
	MISSION_DEFAULT_ACCEPT_BOOL	=	2001119	;
	MISSION_REPET_BOOL	=	2001120	;
	MISSION_PERIOD_CLASS	=	2001121	;
	MISSION_START_TIME_STRING	=	2001122	;
	MISSION_LAST_TIME_INT	=	2001123	;
	MISSION_START_STATE_BOOL	=	2001124	;
	MISSION_EVENT_ID_INT	=	2001125	;
	MISSION_PARAMETER1_INT	=	2001126	;
	MISSION_PARAMETER2_INT	=	2001127	;
	MISSION_REWARD_ITEM_COUNT_CLASS	=	2001128	;
	MISSION_REWARD_GUARD_INT	=	2001129	;
	MISSION_REWARD_HERO_INT	=	2001130	;
	MISSION_EVENT_FINISHTYPE_INT	=	2001131	;
	MISSION_EVENT_FINISHCONDITION1_INT	=	2001132	;
	MISSION_EVENT_FINISHCONDITION2_INT	=	2001133	;
	MISSION_FINISH_CONDITION_BOOL	=	2001134	;
	SALE_PRICE_INT	=	2001135	;
	PLAYER_OWN_CURRENCY_INT	=	2001136	;
	PLAYER_OWN_RMB_INT	=	2001137	;
	INIT_EQUIP_HEAD_INT	=	2001138	;
	INIT_EQUIP_WEAPON_INT	=	2001139	;
	INIT_EQUIP_BODY_INT	=	2001140	;
	INIT_EQUIP_HAND_INT	=	2001141	;
	INIT_EQUIP_FOOT_INT	=	2001142	;
	INIT_EQUIP_JEWELRY_INT	=	2001143	;
	UPGRADE_PHASE_MATERIAL_INT	=	2001144	;
	UPGRADE_PHASE_MATERIAL_COUNT_INT	=	2001145	;
	UPGRADE_SKILL_AFTER_ID_INT	=	2001146	;
	SPECIAL_FILENAME_STRING	=	2001147	;
	SPECIAL_PATH_STRING	=	2001148	;
	USE_SPECIAL_ID_INT	=	2001149	;
	SPECIAL_BODY_POINT_INT	=	2001150	;
	RELEASE_SKILL_OFF_INT	=	2001151	;
	FOLLOW_CHARACTER_DIRECTION_BOOL	=	2001152	;
	FOLLOW_CHARACTER_MOVE_BOOL	=	2001153	;
	INTEGRATED_SKILL_HEROS_ID_CLASS	=	2001154	;
	METHOD_ID_INT	=	2001155	;
	ENEMY_MONOMER_INT	=	2001156	;
	ENEMY_GROUP_INT	=	2001157	;
	ENEMY_ALL_INT	=	2001158	;
	TEAMMATES_MOBOMER_INT	=	2001159	;
	TEAMMATES_GROUP_INT	=	2001160	;
	TEAMMATES_ALL_BUT_THIS_INT	=	2001161	;
	ENEMY_RANDOM_MONOMER_INT	=	2001162	;
	TEAMMATES_RANDOM_MONOMER_INT	=	2001163	;
	PLAYER_THEMSELVES_INT	=	2001164	;
	EFFECT_VALUE_TWO_CLASS	=	2001165	;
	CHANCE_TO_TRIGGER_TWO_INT	=	2001166	;
	CONTINUOU_TIME_TWO_INT	=	2001167	;
	FREQUENCY_TWO_INT	=	2001168	;
	BUFF_GROUP_INT	=	2001169	;
	CASTING_RANGE_CLASS	=	2001170	;
	ATTACK_TYPE_INT	=	2001171	;
	PHYSICAL_DAMAGE_INT	=	2001172	;
	MAGICAL_DAMAGE_INT	=	2001173	;
	MISSION_PRE_INT	=	2001174	;
	NORMAL_ATTACK_SKILL_ID_CLASS	=	2001175	;
	PRIORITY_INT	=	2001176	;
	JUDGE_CONDITION_ONE_INT	=	2001177	;
	MATH_LOGIC_ONE_INT	=	2001178	;
	CONDITION_ONE_DATA_INT	=	2001179	;
	CONDITION_ONE_TWO_RELATION_BOOL	=	2001180	;
	JUDGE_CONDITION_TWO_INT	=	2001181	;
	MATH_LOGIC_TWO_INT	=	2001182	;
	CONDITION_TWO_DATA_INT	=	2001183	;
	EXECUTE_SKILL_ID_ONE_INT	=	2001184	;
	EXECUTE_SKILL_ID_TWO_INT	=	2001185	;
	ID_ONE_PROBABILITY_INT	=	2001186	;
	ID_TWO_PROBABILITY_INT	=	2001187	;
	CYCLE_INTERVAL_INT	=	2001188	;
	EXECUTE_TIMES_INT	=	2001189	;
	PROBABILITY_INT	=	2001190	;
	NEXT_ID_INT	=	2001191	;
	DEBRIS_NEEDED_NUM_INT	=	2001192	;
	UP_COST_INT	=	2001193	;
	STUFF_WEAPONS_INT	=	2001194	;
	STUFF_HEAD_INT	=	2001195	;
	STUFF_BODY_INT	=	2001196	;
	STUFF_HAND_INT	=	2001197	;
	STUFF_FOOT_INT	=	2001198	;
	STUFF_JEWELRY_INT	=	2001199	;
	TEMPLATE_ID_INT	=	2001200	;
	HERO_ID_INT	=	2001201	;
	LESS_THAN_INT	=	2001202	;
	MORE_THAN_INT	=	2001203	;
	UPGRADE_PROPS_CLASS	=	2001204	;
	GROWTH_M_ATTACK_CLASS	=	2001205	;
	GROWTH_M_DEFENSE_CLASS	=	2001206	;
	M_ATTACK_INT	=	2001207	;
	M_DEFENCE_INT	=	2001208	;
	ITEM_USE_EFFECT_CLASS	=	2001209	;
	QUALITY_ICON_STRING	=	2001210	;
	BUFF_SPECIAL_INT	=	2001211	;
	BUFF_CURSE_INT	=	2001212	;
	BUFF_STRONG_INT	=	2001213	;
	BUFF_CONTROL_INT	=	2001214	;
	BUFF_DAMAGE_INT	=	2001215	;
	BUFF_HEAL_INT	=	2001216	;
	BUFF_IMMUNE_INT	=	2001217	;
	BUFF_PROTECT_INT	=	2001218	;
	CASTING_WAY_INT	=	2001219	;
	ACTIVE_SKILL_INT	=	2001220	;
	PASSIVE_SKILL_INT 	=	2001221	;
	ACHIEVEMENT_TYPE_INT	=	2001222	;
	ACHIEVEMENT_SCORE_INT	=	2001223	;
	IS_BOSS_BOOL	=	2001224	;
	USE_POPULATION_INT	=	2001225	;
	DROP_DUNGEON_ID_CLASS	=	2001226	;
	NEED_ITEM_NUM_CLASS	=	2001227	;
	MEMBER_INT	=	2001228	;
	ITEM_USE_TYPE_INT	=	2001229	;
	SUBLEVEL_SCENE_STRING	=	2001230	;
	SUBLEVEL_DATA_STRING	=	2001231	;
	DUNGEON_ID_INT	=	2001232	;
	DUNGEON_NAME_STRING	=	2001233	;
	SUBLEVEL_DIFFICULTY_INT	=	2001234	;
	UNLOCK_PLAYER_LEVEL_INT	=	2001235	;
	UNLOCK_SUBLEVEL_CLASS	=	2001236	;
	BASIC_COMPLETE_TIME_INT	=	2001237	;
	MONSTER_KILL_INT	=	2001238	;
	SPEND_ENERGY_INT	=	2001239	;
	ACTREWARD_CLASS	=	2001240	;
	PASSIVE_NORMAL_ATTACK_INT 	=	2001241	;
	PASSIVE_SKILL_ATTACK_INT 	=	2001242	;
	PASSIVE_HALO_INT 	=	2001243	;
	ATLAS_FOR_ICON_STRING	=	2001244	;
	COLLECT_GUARD_ID_INT	=	2001245	;
	UPDATE_SPEND_CURRENCY_CLASS	=	2001246	;
	MISSION_TYPE_INT	=	2001247	;
	MISSION_REPET_NUM_INT	=	2001248	;
	MISSION_REWARD_EXP_INT	=	2001249	;
	CURRENCY_TYPE_INT	=	2001250	;
	COST_INT	=	2001251	;
	MAX_COUNT_INT	=	2001252	;
	ITEM_ID_INT	=	2001253	;
	TYPE_INT	=	2001254	;
	PROPERTY_TYPE_INT	=	2001255	;
	DAMAGE_TYPE_INT	=	2001256	;
	COLOUR_INT	=	2001257	;
	DAMAGE_PERCENT_INT	=	2001258	;
	DAMAGE_FIXED_VALUE_INT	=	2001259	;
	REDUCTION_PERCENT_INT	=	2001260	;
	REDUCTION_FIXED_VALUE_INT	=	2001261	;
	AGGRO_PERCENT_INT	=	2001262	;
	AGGRO_VALUE_INT	=	2001263	;
	BUFF_STUPOR_INT	=	2001264	;
	BUFF_VERTIGO_INT	=	2001265	;
	BUFF_FEAR_INT	=	2001266	;
	BUFF_DEFORMATION_INT	=	2001267	;
	BUFF_TAUNT_INT	=	2001268	;
	BUFF_SILENT_INT	=	2001269	;
	BUFF_TRANSFORMER_INT	=	2001270	;
	BUFF_MAGIC_IMMUNITY_INT	=	2001271	;
	BUFF_PHYSICAL_IMMUNITY_INT	=	2001272	;
	BUFF_SUPERARMOR_INT	=	2001273	;
	BUFF_INVINCIBLE_INT	=	2001274	;
	BUFF_HOLDBODY_INT	=	2001275	;
	BUFF_REFLECT_INT	=	2001276	;
	BUFF_CLEARBUFF_INT	=	2001277	;
	DROP_CURRENCY_CLASS	=	2001278	;
	MONSTER_AGGRO_LIST	=	2001279	;
	AUDIO_PATH_INT	=	2001280	;
	WHETHER_LOOP_INT	=	2001281	;
	DELAY_TIME_INT	=	2001282	;
	HERO_TYPE	=	2001283	;
	ORDER_BY_INT	=	2001284	;
	CURED_ADD_PERCENT_INT	=	2001285	;
	CURED_ADD_VALUE_INT	=	2001286	;
	REFLECT_PERCENT_INT	=	2001287	;
	REFLECT_VALUE_INT	=	2001288	;
	MAGIC_SHIELD_VALUE_INT	=	2001289	;
	BUFF_PRIORITY_ONE_INT	=	2001290	;
	BUFF_PRIORITY_TWO_INT	=	2001291	;
	DEATH_TIME_INT	=	2001292	;
	ATTACK_HERO_TREND_INT	=	2001293	;
	ONATTACK_HERO_TREND_INT	=	2001294	;
	HP_COMPARE_INT	=	2001295	;
	STATE_NOW_INT	=	2001296	;
	AGGRO_RANKLIST_INT	=	2001297	;
	AGGRO_GOAL_INT	=	2001298	;
	DISTANCE_TO_CASTER_INT	=	2001299	;
	TREND_INT	=	2001300	;
	TREND_TANK_INT	=	2001301	;
	TREND_DOCTOR_INT	=	2001302	;
	TREND_MELLEE_DPS_INT	=	2001303	;
	TREND_RANGED_DPS_INT	=	2001304	;
	TREND_MAGIC_DPS_INT	=	2001305	;
	TREND_TRAP_INT	=	2001306	;
	MONSTER_TYPE_NAME_STRING	=	2001307	;
	ACTIVATE_SKILL_CLASS	=	2001308	;
	SUMMON_BY_HP_CLASS	=	2001309	;
	MONSTER_TYPE_INT	=	2001310	;
	TEAMMATE_ID_INT	=	2001311	;
	SKILL_IS_COOLDOWN_INT	=	2001312	;
	SKILL_STATE_INT	=	2001313	;
	HAVE_SUMMON_ID_INT	=	2001314	;
	EQUAL_INT	=	2001315	;
	NORMAL_AI_CLASS	=	2001316	;
	ADVANCED_AI_CLASS	=	2001317	;
	IS_TO_BE_ATTACKED_BOOL	=	2001318	;
	DEBUFF_CAN_SKILL_CLASS	=	2001319	;
	NEWBIE_ACTIVE_CONDITION_CLASS	=	2001320	;
	NEWBIE_EXECUTE_CLASS	=	2001321	;
	NEWBIE_NOTIFY_CLASS	=	2001322	;
	NEWBIE_COMPLETE_INT	=	2001323	;
	INS_ROLE_ID_INT	=	2001324	;
	INS_FACE_STRING	=	2001325	;
	INS_DETAILS_STRING	=	2001326	;
	INS_SKIP_BOOL	=	2001327	;
	INS_STYLE_INT	=	2001328	;
	PASSIVE_SKILL_LIST_CLASS	=	2001329	;
	ACTIVATE_ID_SKILL_CLASS	=	2001330	;
	IS_IN_COOLTIME_BOOL	=	2001331	;
	AI_HP_RANGE_CLASS	=	2001332	;
	COLOUR_CHANGE_TYPE_INT	=	2001333	;
	PK_AI_LIST_CLASS	=	2001334	;
	GAME_EASY_AI_LIST_CLASS	=	2001335	;
	GAME_NORM_AI_LIST_CLASS	=	2001336	;
	GAME_DIFF_AI_LIST_CLASS	=	2001337	;
	GUARDUP_NEED_DEBRIS_ID_CLASS	=	2001338	;
	SUBLEVEL_GUARDID_CLASS	=	2001339	;
	SCALE_INT	=	2001340	;
	HAVE_BUFFID_INT	=	2001341	;
	IN_COOLTIME_INT	=	2001342	;
	MISSION_EVENT_DESCRIBEONE_STRING	=	2001343	;
	MISSION_EVENT_DESCRIBETWO_STRING	=	2001344	;
	UNLOCK_CASTLE_ID_INT	=	2001345	;
	ANDROID_MOTAI_INFO_CLASS	=	2001346	;
	IOS_MOTAI_INFO_CLASS	=	2001347	;
	USE_ITEM_COUNT_INT	=	2001348	;
	LOTTERY_TYPE_INT	=	2001349	;
	COUNT_INT	=	2001350	;
	LOTTERY_MONEY_INT	=	2001351	;
	LOTTERY_RMB_INT	=	2001352	;
	DUNGEON_MUSIC_STRING	=	2001353	;
	POST_MULRIPLE_INT	=	2001354	;
	FINISH_TIME_STRING	=	2001355	;
	VIP_ADD_COUNT_CLASS	=	2001356	;
	VIP_ADD_RATE_CLASS	=	2001357	;
	REWARD_IDX_INT	=	2001358	;
	CHECKIN_DAYS_INT	=	2001359	;
	MONTH_OPEN_INT	=	2001360	;
	REWARD_MONEY_INT	=	2001361	;
	REWARD_RMB_INT	=	2001362	;
	PVE_MAP_PRO_CLASS	=	2001363	;
	PARTNER_AI_CLASS	=	2001364	;
	SCREEN_POS_INDEX_INT	=	2001365	;
	USE_COUNT_INT	=	2001366	;
	FLY_STATE_INT	=	2001367	;
	VIP_VITALITY_INT	=	2001368	;
	VIP_SWEEP_INT	=	2001369	;
	VIP_REPLENIS_RMB_BOOL	=	2001370	;
	VIP_3V3_COUNT_INT	=	2001371	;
	VIP_PVP_COUNT_INT	=	2001372	;
	VIP_FRIEND_COUNT_INT	=	2001373	;
	VIP_TREASURE_INT	=	2001374	;
	VIP_OPEN_HERO_INT	=	2001375	;
	VIP_ITEM_COUNT_INT	=	2001376	;
	VIP_ITEM_RATE_INT	=	2001377	;
	JUMP_INTERFACE_STRING	=	2001378	;
	SKILL_LIST_PVP_CLASS	=	2001379	;
	REWARD_SOUL_INT	=	2001380	;
	SOUL_INT	=	2001381	;
	DUP_DROP_SOUL_CLASS	=	2001382	;
	EXCHANGE_RMB_COUNT	=	2001383	;
	EXCHANGE_RMB_RATIO	=	2001384	;
	ACHIEVEMENT_GROUP_INT	=	2001385	;
	VIP_SWEEP_TEN_BOOL	=	2001386	;
	FIGHTING_NUM_INT	=	2001387	;
	BG_ICON_STRING	=	2001388	;
	HAVE_SPRITE_ID_INT	=	2001389	;
	NEAR_SPRITE_INT	=	2001390	;
	RANDOM_SHOP_INDEX_INT	=	2001391	;
	BUFF_WORD_STRING	=	2001392	;
	SUBLEVEL_LOCATE_CLASS	=	2001393	;
	SUBLEVEL_TYPICAL_ENEMY_CLASS	=	2001394	;
	UPSKILL_WORD_STRING	=	2001395	;
	ITEM_USE_DESCRIBE_STRING	=	2001396	;
	HERO_INTRO_STRING	=	2001397	;
	EYESIGHT_ACTIVATE_INT	=	2001398	;
	ACCEPT_MISSION_CONDITION	=	2001399	;
	GRIMOIRE_BUY_TYPE_ONE_CLASS	=	2001400	;
	GRIMOIRE_BUY_TYPE_TWO_CLASS	=	2001401	;
	GRIMOIRE_BUY_TYP_THREE_CLASS	=	2001402	;
	GRIMOIRE_CONDITION_ONE_CLASS	=	2001403	;
	GRIMOIRE_CONDITION_TWO_CLASS	=	2001404	;
	GRIMOIRE_RELATION_BOOL	=	2001405	;
	GRIMOIRE_BY_TIME_INT	=	2001406	;
	GRIMOIRE_BY_BLOOD_INT	=	2001407	;
	GRIMOIRE_TYPE_INT	=	2001408	;
	GRIMOIRE_FIRE_INT	=	2001409	;
	GRIMOIRE_ICE_INT	=	2001410	;
	GRIMOIRE_LIGHT_INT	=	2001411	;
	GRIMOIRE_DARK_INT	=	2001412	;
	GRIMOIRE_NATURE_INT	=	2001413	;
	GRIMOIRE_SUMMON_ID_INT	=	2001414	;
	BUFF_REPEAT_BY_DESTORY_BOOL	=	2001415	;
	DUNGEON_COMPLETE_EXP_INT	=	2001416	;
	DUNGEON_ATTACK_COUNT_INT	=	2001417	;
	BUFF_CONTROL_INDEX_INT	=	2001418	;
	BUFF_SHOW_SPRITE_STRING	=	2001419	;
	LEVEL_SECTION_CLASS	=	2001420	;
	PROBABILITY_SECTION_CLASS	=	2001421	;
	WHETHER_SHOW_PROGRESS_BOOL	=	2001422	;
	HERO_VITALITY_INT	=	2001423	;
	HERO_VITALITY_TIME_INT	=	2001424	;
	SKILL_TYPE_THREE_INT	=	2001425	;
	SKILL_EFFECT_THREE_INT	=	2001426	;
	BUFF_PRIORITY_THREE_INT	=	2001427	;
	EFFECT_VALUE_THREE_CLASS	=	2001428	;
	CHANCE_TO_TRIGGER_THREE_INT	=	2001429	;
	CONTINUOU_TIME_THREE_INT	=	2001430	;
	FREQUENCY_THREE_INT	=	2001431	;
	EFFECT_RANGE_THREE_CLASS	=	2001432	;
	SKILL_DRAG_INDEX_INT	=	2001433	;
	SKILL_DRAG_RADIUS_CALSS	=	2001434	;
	BUFF_ANIMATION_CLASS	=	2001435	;
	TRAP_TYPE_INT	=	2001436	;
	TRAP_ACTIVATE_TEC_CLASS	=	2001437	;
	TRAP_UNLOCK_LEVEL_INT	=	2001438	;
	TRAP_NEED_ELECTRIC_INT	=	2001439	;
	TRAP_UPGRADE_TIME_INT	=	2001440	;
	TEC_TREE_EFFECT_CLASS	=	2001441	;
	TEC_TREE_NEED_PRE_TEC_CLASS	=	2001442	;
	TEC_TREE_NEED_POINT_MIN_INT	=	2001443	;
	TRAP_ENEMY_ID_INT	=	2001444	;
	BATTLE_BEFPORE_SKILL_CLASS	=	2001445	;
	BATTLE_BEFPORE_BUFF_CLASS	=	2001446	;
	BATTLE_END_CLASS	=	2001447	;
	SPEND_SOUL_INT	=	2001448	;
	ADD_BLOOD_PERCENT_INT	=	2001449	;
	ADD_BLOOD_VALUE_INT	=	2001450	;
	PROFESSIONAL_ICON_STRING	=	2001451	;
	TEC_POSITION_CLASS	=	2001452	;
	HERO_VITALITY_ITEM_INT	=	2001453	;
	MAP_DRAPGUARD_ID = 2001454 ;
	GUARD_ACTIVATE_LEVEL = 2001455;












	
































};





